--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ psutil
 py-tgcalls==0.9.7
 pykeyboard
 https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
+httpx==0.27.2
 python-dotenv
 pyyaml
 requests
