--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ pillow==9.5.0
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
+pyrofork==2.3.32
 httpx==0.27.2
 python-dotenv
 pyyaml
